--- a/Rendyll.html
+++ b/Rendyll.html
@@ -35,8 +35,7 @@
         <img class="img5" src="../Assets/Group 24.png" alt="">
     </div>
     <div class="kfc">
-        <h1 class="kfc1"> KYLLE'S</h1>
-        <h1 class="kfc1 f"> FRIED</h1>
+        <h1 class="kfc1"> KYLLE'S <br>FRIED</h1>
     </div>
     <img class="c1" src="../Assets/Kylle_s-removebg-preview 2.png" alt="">
     <div class="cc1">
@@ -44,6 +43,35 @@
     </div>
     <div class="ordernowbg"></div>
     <h1 class="ordernow">Order now</h1>
+    <img class="pp" src="../Assets/PWEDE PANG.png" alt="">
+    <img class="c2" src="../Assets/Kylle_s-removebg-preview 2.png" alt="">
+    <div class="cc2">
+        <h1 class="ccc2">PULUTAN</h1>
+    </div>
+    <h2 class="enjoy"> Enjoy eating with your <br>
+        friends and family. The <br>
+        best way to connect with <br>
+        each other is through <br>
+        food.
+    </h2>
+    <div class="bg4">
+        <img class="img6" src="../Assets/image 1.png" alt="">
+        <img class="img7" src="../Assets/image 2.png" alt="">
+    </div>
+    <h3 class="iop">Inqueries: <br>
+        Order: <br>
+        Phone: </h3>
+    <h3 class="contact">@kyllesfriedchicken <br>
+        @kyllesfriedchicken <br>
+        (032)-566-664</h3>
+    <div class="ordernowbg2"></div>
+    <h3 class="contactus">Contact us</h3>
+    <div class="footer">
+        <img class="c3" src="../Assets/Kylle_s-removebg-preview 2.png" alt="">
+        <img class="c4" src="../Assets/facebook.png" alt="">
+        <img class="c5" src="../Assets/instagram.png" alt="">
+        <img class="c6" src="../Assets/Group 26.png" alt="">
+    </div>
 </body>
 
 </html>
