--- a/Cabardo.html
+++ b/Cabardo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 </head>
+
 <body>
     <!-- menu -->
     <img class="menu" src="../Assets/menu.png" alt="">
@@ -37,7 +39,13 @@
         <img class="addcart2" src="../Assets/cart.png" alt="">
     </div>
     <!-- descs -->
-     
+    <div class="desc1bg">
+        <h1 class="desc11"> Native <br> Crispy</h1>
+        <img class="c1" src="../Assets/Kylle_s-removebg-preview 2.png" alt="">
+        <div class="cc1">
+            <h1 class="ccc1">₱88.89</h1>
+        </div>
+    </div>
     <!-- footer -->
     <div class="footer">
         <img class="c3" src="../Assets/Kylle_s-removebg-preview 2.png" alt="">
@@ -46,4 +54,5 @@
         <img class="c6" src="../Assets/Group 26.png" alt="">
     </div>
 </body>
+
 </html>
