--- a/Cabardo.html
+++ b/Cabardo.html
@@ -20,23 +20,23 @@
     <!-- menu -->
     <img class="menu" src="../Assets/menu.png" alt="">
     <img class="acc" src="../Assets/account.png" alt="">
-    <img class="cart" src="../Assets/cart.png" alt="">
+    <img class="cart" src="../Assets/add_cart.png" alt="">
     <!-- pics -->
     <div class="bg1">
         <img class="img1" src="../Assets/Group 23.png" alt="">
-        <img class="addcart1" src="../Assets/cart.png" alt="">
+        <img class="addcart1" src="../Assets/add_cart.png" alt="">
     </div>
     <div class="bg2">
         <img class="img2" src="../Assets/Group 24.png" alt="">
-        <img class="addcart2" src="../Assets/cart.png" alt="">
+        <img class="addcart2" src="../Assets/add_cart.png" alt="">
     </div>
     <div class="bg3">
         <img class="img3" src="../Assets/Group 24.png" alt="">
-        <img class="addcart1" src="../Assets/cart.png" alt="">
+        <img class="addcart1" src="../Assets/add_cart.png" alt="">
     </div>
     <div class="bg4">
         <img class="img4" src="../Assets/Group 24.png" alt="">
-        <img class="addcart2" src="../Assets/cart.png" alt="">
+        <img class="addcart2" src="../Assets/add_cart.png" alt="">
     </div>
     <!-- descs -->
     <div class="desc1bg">
@@ -44,6 +44,27 @@
         <img class="c1" src="../Assets/Kylle_s-removebg-preview 2.png" alt="">
         <div class="cc1">
             <h1 class="ccc1">₱88.89</h1>
+        </div>
+    </div>
+    <div class="desc2bg">
+        <h1 class="desc22"> Native <br> Manok</h1>
+        <img class="c2" src="../Assets/Kylle_s-removebg-preview 2.png" alt="">
+        <div class="cc2">
+            <h1 class="ccc2">₱399</h1>
+        </div>
+    </div>
+    <div class="desc1bg a1">
+        <h1 class="desc11"> Native <br> Crispy</h1>
+        <img class="c1" src="../Assets/Kylle_s-removebg-preview 2.png" alt="">
+        <div class="cc1">
+            <h1 class="ccc1">₱88.89</h1>
+        </div>
+    </div>
+    <div class="desc2bg a2">
+        <h1 class="desc22"> Native <br> Manok</h1>
+        <img class="c2" src="../Assets/Kylle_s-removebg-preview 2.png" alt="">
+        <div class="cc2">
+            <h1 class="ccc2">₱399</h1>
         </div>
     </div>
     <!-- footer -->
