--- a/Cabardo.html
+++ b/Cabardo.html
@@ -20,7 +20,9 @@
     <!-- menu -->
     <img class="menu" src="../Assets/menu.png" alt="">
     <img class="acc" src="../Assets/account.png" alt="">
-    <img class="cart" src="../Assets/add_cart.png" alt="">
+    <img class="cart" src="../Assets/cart.png" alt="">
+    <h2 class="search"><b>Search</b></h2>
+    <img class="searchicon" src="../Assets/search.png" alt="">
     <!-- pics -->
     <div class="bg1">
         <img class="img1" src="../Assets/Group 23.png" alt="">
@@ -35,7 +37,7 @@
         <img class="addcart1" src="../Assets/add_cart.png" alt="">
     </div>
     <div class="bg4">
-        <img class="img4" src="../Assets/Group 24.png" alt="">
+        <img class="img4" src="../Assets/image 1.png" alt="">
         <img class="addcart2" src="../Assets/add_cart.png" alt="">
     </div>
     <!-- descs -->
