--- a/Rendyll.html
+++ b/Rendyll.html
@@ -26,6 +26,7 @@
     <div class="bg2">
         <img class="img2" src="../Assets/image 1.png" alt="">
         <img class="img3" src="../Assets/image 2.png" alt="">
+        <img class="img8" src="../Assets/right-left.png" alt="">
     </div>
     <div class="sale1">
         <h3 class="saletext"><b><span class="percent">25%</span> off at <br>1st purchase</b></h3>
@@ -56,6 +57,7 @@
     <div class="bg4">
         <img class="img6" src="../Assets/image 1.png" alt="">
         <img class="img7" src="../Assets/image 2.png" alt="">
+        <img class="img9" src="../Assets/right-left.png" alt="">
     </div>
     <h3 class="iop">Inqueries: <br>
         Order: <br>
